added api key authentication
